<resources>
    <string name="app_name">MyPassword</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="add">添加</string>
    <string name="add_group">添加分组</string>
    <string name="import_password">导入</string>
    <string name="output_password">导出</string>
    <string name="about">关于</string>
    <string name="no_group">没有分组，添加几个试试</string>
    <string name="next">下一步</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="title">标题：</string>
    <string name="title_hint">必填</string>
    <string name="password_group">分组：</string>
    <string name="user_name">账号：</string>
    <string name="password">密码：</string>
    <string name="note_hint">这里可以记录一些备注信息</string>
    <string name="rmk">备注：</string>
    <string name="app_version">v 2.0</string>
    <string name="made_by">Made by LNY</string>
    <string name="contact_me">You can contact me at</string>
    <string name="email_address" translatable="false">614580167@qq.com</string>
</resources>
