<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center|top"
    android:background="@color/white"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_pwddetail_toptitile"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:onClick="backAction"
            android:src="@drawable/ico_left" />

        <TextView
            android:id="@+id/tv_pwddetail_toptitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="关于作者"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <!--<TextView
            android:id="@+id/tv_guard_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="qita"
            android:textColor="@color/white"
            android:textSize="22sp"
            />-->

    </RelativeLayout>

    <ImageView
        android:id="@+id/aboutImageView"
        android:scaleType="centerCrop"
        android:src="@drawable/ico_app"
        android:layout_marginTop="50dp"
        android:layout_width="99dp"
        android:layout_height="100dp" />

    <TextView
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/aboutVersionTextView"
        android:text="@string/app_version"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/made_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/contact_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/aboutContactMe"
        android:layout_marginTop="4dp"
        android:autoLink="email"
        android:linksClickable="true"
        android:text="@string/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />





</LinearLayout>