<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.mypassword.ui.password.AddPwdActivity">

    <RelativeLayout
        android:id="@+id/rl_addpwd_toptitile"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:onClick="backAction"
            android:src="@drawable/ico_left" />

        <TextView
            android:id="@+id/tv_addpwd_toptitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="添加密码"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <!--<TextView
            android:id="@+id/tv_guard_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="qita"
            android:textColor="@color/white"
            android:textSize="22sp"
            />-->

    </RelativeLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/title"
                    android:textColor="@color/title_color"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_password_title"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_holo_light"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/title_hint"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/title_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:baselineAligned="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_addpwd_group"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:text="@string/password_group"
                    android:textColor="@color/title_color"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spn_addpwd_group"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/user_name"
                    android:textColor="@color/title_color"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_addpwd_account"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_holo_light"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/title_hint"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/title_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:text="@string/password"
                    android:textColor="@color/title_color"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_addpwd_pwd"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_holo_light"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/title_hint"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/title_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:text="@string/rmk"
                    android:textColor="@color/title_color"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_addpwd_rmk"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_holo_light"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/title_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_addpwd_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button"
                    android:text="@string/next"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
